--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,10 @@
 <div>
   <div class="winterscape">
-    <h1 class="main-h1">Welcome to the Eskimo Brothers Database Bed &amp; Breakfast!</h1>
+    <h1 class="main-h1">Welcome to the EBDBBnB!</h1>
+    <h2 class="main-h2">The Eskimo Brothers Database Bed &amp; Breakfast</h2>
   </div>
+</div>
+
+<div class="add-place">
+  <button type="button" name="add-button" class="add-button"><%= link_to 'Add a Place', new_place_path %></button>
 </div>
