--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -2,3 +2,9 @@
   border-radius: 0;
   margin-bottom: 0;
 }
+
+.navbar-inverse .navbar-brand {
+  color: #9dc8ea;
+  font-family: 'Lato', sans-serif;
+  font-size: 28px;
+}
