--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Places controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.main-h1 {
+.main-h1, .main-h2, .form-h1 {
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
@@ -11,9 +11,20 @@
   margin-left: 25px;
 }
 
+.form-h1 {
+  margin-top: 50px;
+}
+
+.main-h2 {
+  font-size: 40px;
+  font-weight: 400;
+  color: #444;
+}
+
 .winterscape {
-  // background-image: url('/images/winter.jpg');
+  background-image: url('/images/winter.jpg');
   background-size: cover;
   background-position: center;
-  height: 100%;
+  height: 628px;
+  margin-top: 50px;
 }
