--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -14,17 +14,17 @@
     <% end %>
     <div class="form-div">
       <%= f.label :location %><br>
-      <%= f.text_field :location %>
+      <%= f.text_field :location, placeholder: "Incline Village, NV", :maxlength => 30, :rows => 1, :cols => 30 %>
     </div>
 
     <div class="form-div">
       <%= f.label :price %><br>
-      <%= f.text_area :price %>
+      <%= f.number_field :price, placeholder: "200.00", :maxlength => 10, :rows => 1, :cols => 12%>
     </div>
 
     <div class="form-div">
-      <%= f.label :dates_available %><br>
-      <%= f.text_area :dates_available %>
+      <%= f.label :dates_available%><br>
+      <%= f.date_field :dates_available, placeholder: "YYYY/MM/DD", :maxlength => 10, :rows => 1, :cols => 12 %>
     </div>
 
     <div class="form-div">
