--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="location-h1">Come visit beautiful <%= @place.location %>!</h1>
+<h1 class="main-h1">Come visit beautiful <%= @place.location %>!</h1>
 
 <div class="place-display">
   <div>
