--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -86,6 +86,8 @@
   margin-left: 550px;
   margin-right: 550px;
   padding: 25px;
+  background-color: rgba(0,0,0,.6);
+  color: #fafafa;
 }
 
 .display-table {
