adding review functionality

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -15,5 +15,7 @@
         <% end %>
       </table>
     </div>
+    <h2 class="main-h2">Reviews</h2>
+    <%= render 'reviews/show' %>
   </div>
 </div>
