--- a/app/assets/stylesheets/nav.css
+++ b/app/assets/stylesheets/nav.css
@@ -1,14 +1,31 @@
 .navbar-inverse {
   border-radius: 0;
   margin-bottom: 0;
+  background-image: url('/images/winter.jpg');
+  background-position: center;
+  background-size: cover;
+  height: 400px;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #9dc8ea;
+  color: #333;
+  font-weight: 700;
   font-family: 'Lato', sans-serif;
   font-size: 28px;
+  text-align: center;
 }
 
 .navbar-inverse .navbar-brand:hover {
   color: #fafafa;
+}
+
+.navbar-inverse .navbar-form {
+  margin-top: 330px;
+  text-align: center;
+}
+
+.navbar>.container-fluid .navbar-brand {
+  margin-left: 465px;
+  font-size: 60px;
+  margin-top: 15px;
 }
