--- a/app/views/places/_nav.html.erb
+++ b/app/views/places/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       </ul>
-      <form class="navbar-form navbar-right">
+      <form class="navbar-form searchbar">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Find a Place">
         </div>
