--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@place, @review] do |f| %>
+<%= form_for [@places, @review] do |f| %>
 <fieldset class="add-form">
     <% if @review.errors.any? %>
       <div>
@@ -19,12 +19,12 @@
 
     <div class="form-div">
       <%= f.label :description %><br>
-      <%= f.text_field :description, placeholder: "Your review here", :maxlength => 180, :rows => 4, :cols => 12%>
+      <%= f.text_field :description, placeholder: "Your review here", :maxlength => 180, :rows => 4, :cols => 12 %>
     </div>
 
     <div class="form-div">
       <%= f.label :rating%><br>
-      <%= f.number_field :rating, placeholder: "1-5", :maxlength => 3, :rows => 1, :cols => 4 %>
+      <%= f.number_field :rating, placeholder: "1-5", :min => 1, :max => 5, :maxlength => 3, :rows => 1, :cols => 4 %>
     </div>
 
     <div class="form-div">
