--- a/app/views/places/_nav.html.erb
+++ b/app/views/places/_nav.html.erb
@@ -13,14 +13,16 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <%= form_tag search_results_places_path, :method => 'get' do %>
       <ul class="nav navbar-nav">
       </ul>
       <form class="navbar-form searchbar">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Find a Place">
+        <div class="form-group search-bar" id="search">
+          <input type="text" class="form-inline" placeholder="Find a Place">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default search-btn">Submit</button>
       </form>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
